# ata

./: .gitmodules  Cargo.toml  GNUmakefile  README.md  README.md.sh
.github/workflows/: Release.yml
ata/: Cargo.toml
ata/src/: config.rs  help.rs  main.rs  prompt.rs
ata²/: Cargo.toml
ata²/src/: args.rs  config.rs  help.rs  main.rs  prompt.rs  readline.rs  state.rs
ata²/src/help/: keybindings.txt
