[package]
name = "ata"
version = "3.1.0"
edition = "2021"
authors = ["Fredrick R. Brennan <copypaste@kittens.ph>", "Rik Huijzer <t.h.huijzer@rug.nl>", "ATA Project Authors"]
homepage = "https://github.com/ctrlcctrlv/ata2"
repository = "https://github.com/ctrlcctrlv/ata2"
readme = "README.md"
description = "Ask the Terminal Anything² — ChatGPT¾ in your terminal"
license = "Apache-2.0"

[[bin]]
name = "ata2"
path = "src/main.rs"

[dependencies]
rustyline = "10"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "1", features = ["full"] }
toml = { version = "0.6" }
log = "0.4"
env_logger = "0.10"
directories = "4.0.1"
lazy_static = "1.4.0"
os_str_bytes = { version = "6.6", features = ["conversions"] }
bevy_reflect = "0.9.1"
bevy_utils = "0.9.1"
ansi-colors = "0.3.0"
clap = { version = "4.4", features = ["cargo", "derive"] }
once_cell = "1.18.0"
atty = "0.2.14"
async-openai = { version = "0.16.2", features = ["native-tls-vendored"] }
futures-util = { version = "0.3.29", features = ["io"] }
tokio-stream = { version = "0.1.14", features = ["sync", "full"] }

[dev-dependencies]
pretty_assertions = "1"
